--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ header {
 
 } */
 
-.headings li{
-    cursor:pointer;
+.headings li {
+    cursor: pointer;
 }
 
 .headings ul li:hover {
@@ -160,11 +160,8 @@ header {
 
 }
 
-/* softskill */
 
-.softSkills {
-    /* height: 80vh; */
-}
+
 
 
 
@@ -250,11 +247,7 @@ form button {
 }
 
 /* media queries */
-/* 
- @media only screen and (min-width: 992px) {} 
-@media only screen and (min-width: 320px) and (max-width: 479px){ ... }
 
-@media only screen and (min-width: 480px) and (max-width: 767px){ ... }*/
 
 
 @media only screen and (max-width: 820px) {
@@ -285,7 +278,7 @@ form button {
 
     .home {
         position: relative;
-        top: -8em;
+        bottom: 8em;
         z-index: -1;
         flex-direction: column-reverse;
         justify-content: center;
@@ -298,15 +291,14 @@ form button {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 4em;
+
     }
 
-    .projects {
-        height: auto;
-    }
+
 
     .contactMe {
         width: auto;
+        height: auto;
         background-color: var(--bg-color);
 
     }
@@ -353,12 +345,9 @@ form button {
         gap: 4em;
     }
 
-    .projects {
-        height: auto;
-    }
-
     .contactMe {
         width: auto;
+        height: auto;
         background-color: var(--bg-color);
 
     }
